domino/src/send-message.2/s
send_error.c: In function ‘send_error_message’:
send_error.c:232:5: error: unknown type name ‘do_string_list_t’
     do_string_list_t *sendlist;
     ^~~~~~~~~~~~~~~~
send_error.c:267:16: warning: implicit declaration of function ‘do_string_list_new_from_csv’ [-Wimplicit-function-declaration]
     sendlist = do_string_list_new_from_csv(send_error->sendto);
                ^~~~~~~~~~~~~~~~~~~~~~~~~~~
send_error.c:267:14: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
     sendlist = do_string_list_new_from_csv(send_error->sendto);
              ^
send_error.c:268:29: error: request for member ‘count’ in something not a structure or union
     for (i = 0; i < sendlist->count; i++) {
                             ^~
send_error.c:269:37: error: request for member ‘list’ in something not a structure or union
         m = lm_message_new (sendlist->list[i], LM_MESSAGE_TYPE_MESSAGE);
                                     ^~
send_error.c:274:34: error: request for member ‘list’ in something not a structure or union
                          sendlist->list[i], error ? error->message:"");
                                  ^~
send_error.c:284:5: warning: implicit declaration of function ‘do_string_list_free’ [-Wimplicit-function-declaration]
     do_string_list_free(sendlist);
     ^~~~~~~~~~~~~~~~~~~
send_error.c: In function ‘send_im_message’:
send_error.c:361:5: error: unknown type name ‘do_string_list_t’
     do_string_list_t *sendlist = do_string_list_new_from_csv(recipients);
     ^~~~~~~~~~~~~~~~
send_error.c:361:34: warning: initialization makes pointer from integer without a cast [-Wint-conversion]
     do_string_list_t *sendlist = do_string_list_new_from_csv(recipients);
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
send_error.c:363:29: error: request for member ‘count’ in something not a structure or union
     for (i = 0; i < sendlist->count; i++) {
                             ^~
send_error.c:364:37: error: request for member ‘list’ in something not a structure or union
         m = lm_message_new (sendlist->list[i], LM_MESSAGE_TYPE_MESSAGE);
                                     ^~
send_error.c:369:34: error: request for member ‘list’ in something not a structure or union
                          sendlist->list[i], error ? error->message:"");
                                  ^~
make: *** [send-error-message] Ошибка 1
